emergency fix intro overlapping pult-up

--- a/webapp/css/_centerpanel.scss
+++ b/webapp/css/_centerpanel.scss
@@ -46,8 +46,8 @@
 			left: 0px;
 			z-index: 1;
 			width: 100%;
-			height: 100%;
-			padding: 10px 15px 10px 15px;
+			bottom: 30px;
+			padding: 10px 15px 0px 15px;
 			text-align: center;
 			font-size: 20px;
 		}
